syntax = "proto3";

package com.example.protos;

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello   (NameRequest) returns (HelloReply) {}
    rpc sayGoodbye (NameRequest) returns (stream GoodByeReply) {}
}

// The request message containing the user's name.
message NameRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}

// The response message containing the greetings
message GoodByeReply {
    string message = 1;
}
